<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>Lv-427.Java</groupId>
    <artifactId>greencity</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Green City</name>
    <description>Project named Green City by SoftServe ITA team Lv-427.Java</description>
    <packaging>pom</packaging>

    <modules>
        <module>service-api</module>
        <module>dao</module>
        <module>core</module>
        <module>service</module>
    </modules>

    <properties>
        <junit-jupiter.version>5.10.1</junit-jupiter.version>
        <mockito-junit-jupiter.version>5.7.0</mockito-junit-jupiter.version>
        <mockito-core.version>5.2.0</mockito-core.version>
        <modelmapper.version>3.2.0</modelmapper.version>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <checkstyle-maven-plugin.version>3.1.0</checkstyle-maven-plugin.version>
        <spring-security.version>6.1.5</spring-security.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.exclusions>**/config/*</sonar.exclusions>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
        <sonar.language>java</sonar.language>
        <test.containers.version>1.19.1</test.containers.version>
        <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
        <net.java.dev.jna.version>5.13.0</net.java.dev.jna.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>5.12.0</version>
                <configuration>
                    <activeRecipes>
                        <recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
                        <recipe>org.openrewrite.hibernate.MigrateToHibernate62</recipe>
                        <recipe>org.openrewrite.java.migrate.lang.StringFormatted</recipe>
                        <recipe>org.openrewrite.github.SetupJavaUpgradeJavaVersion</recipe>
                        <recipe>org.openrewrite.java.migrate.lang.UseTextBlocks</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.RemoveEnableBatchProcessing</recipe>
                        <recipe>org.openrewrite.java.migrate.jakarta.JavaxMigrationToJakarta</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.RemoveConstructorBindingAnnotation</recipe>
                        <recipe>org.openrewrite.java.spring.boot2.MoveAutoConfigurationToImportsFile</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.ActuatorEndpointSanitization</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.MigrateMaxHttpHeaderSize</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.DowngradeServletApiWhenUsingJetty</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.ConfigurationOverEnableSecurity</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.SpringBootProperties_3_1</recipe>
                        <recipe>org.openrewrite.java.spring.boot3.MigrateThymeleafDependencies</recipe>
                        <recipe>org.openrewrite.java.spring.security6.UpgradeSpringSecurity_6_1</recipe>
                    </activeRecipes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-migrate-java</artifactId>
                        <version>2.3.0</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-spring</artifactId>
                        <version>5.1.1</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-hibernate</artifactId>
                        <version>1.0.7</version>
                    </dependency>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-static-analysis</artifactId>
                        <version>1.1.0</version>
                        <scope>runtime</scope>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.11</version>
                 <configuration>
                    <excludes>
                        <exclude>**/config/*</exclude>
                        <exclude>**/enums/*</exclude>
                        <exclude>**/exceptions/*</exclude>
                        <exclude>**/entity/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.23.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>${project.basedir}/../formatter.xml</configFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
